--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer bg-primary text-muted" data-bs-theme="dark">
+    <footer class="footer bg-primary text-muted" data-bs-theme="dark">
         <div class="container text-center">
             Made with <i class="bi bi-suit-heart-fill"></i> by Mahmoud Adel
         </div>
