--- a/BulkyWeb/Views/Category/Index.cshtml
+++ b/BulkyWeb/Views/Category/Index.cshtml
@@ -13,7 +13,7 @@
     </div>
     <table class="table table-bordered table-striped">
         <thead>
-            <tr class="table-info">
+            <tr class="table-primary">
                 <th>Category Name</th>
                 <th>Display Order</th>
             </tr>
