--- a/BulkyWeb/Views/Category/Index.cshtml
+++ b/BulkyWeb/Views/Category/Index.cshtml
@@ -6,7 +6,7 @@
             <h2 class="text-primary">Category List</h2>
         </div>
         <div class="col-6 text-end">
-            <a class="btn btn-primary" asp-controller="" asp-action="">
+            <a class="btn btn-primary" asp-controller="Category" asp-action="Create">
                 <i class="bi bi-plus-circle"></i> Create New Category
             </a>
         </div>
