--- a/BulkyWeb/Views/Category/Create.cshtml
+++ b/BulkyWeb/Views/Category/Create.cshtml
@@ -12,7 +12,7 @@
         </div>
         <div class="mb-3 row p-1">
             <label asp-for="DisplayOrder" class="p-0"></label>
-            <input asp-for="DisplayOrder" type="text" class="mt-2 form-control" />
+            <input asp-for="DisplayOrder" type="number" class="mt-2 form-control" />
         </div>
 
         <div class="row">
