--- a/BulkyWeb/Views/Category/Create.cshtml
+++ b/BulkyWeb/Views/Category/Create.cshtml
@@ -9,10 +9,12 @@
         <div class="mb-3 row p-1">
             <label asp-for="Name" class="p-0"></label>
             <input asp-for="Name" type="text" class="mt-2 form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="mb-3 row p-1">
             <label asp-for="DisplayOrder" class="p-0"></label>
-            <input asp-for="DisplayOrder" type="number" class="mt-2 form-control" />
+            <input asp-for="DisplayOrder" type="number" class="mt-2 form-control" />            
+            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
         </div>
 
         <div class="row">
