--- a/BulkyWebRazor_Temp/Pages/Categories/Index.cshtml
+++ b/BulkyWebRazor_Temp/Pages/Categories/Index.cshtml
@@ -7,7 +7,7 @@
             <h2 class="text-primary">Category List</h2>
         </div>
         <div class="col-6 text-end">
-            <a class="btn btn-primary" asp-controller="Category" asp-action="Create">
+            <a class="btn btn-primary" asp-page="/categories/create">
                 <i class="bi bi-plus-circle"></i> Create New Category
             </a>
         </div>
