--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -14,7 +14,8 @@
                 <div class="col-10">
                     <div class="border p-3">
                         <input asp-for="Product.Id" hidden />
-                        @*<div asp-validation-summary="ModelOnly"></div>*@
+                        <input asp-for="Product.ImageUrl" hidden />
+                        @* <div asp-validation-summary="ModelOnly"></div> *@
                         <div class="form-floating py-2 col-12">
                             <input asp-for="Product.Title" class="form-control border-0 shadow" />
                             <label asp-for="Product.Title" class="ms-2"></label>
