--- a/BulkyWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/BulkyWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<Product>
 
-<div class="row pb-3 mb-4">
+<div class="row pb-3">
     @foreach (var product in Model)
     {
-        <div class="col-lg-3 col-sm-6 my-2">
+        <div class="col-lg-3 col-sm-6">
             <div class="row p-2">
                 <div class="col-12 p-1">
                     <div class="card border-0 p-3 shadow  border-top border-5 rounded">
@@ -31,7 +31,10 @@
                             </div>
                         </div>
                         <div>
-                            <a href="#" class="btn btn-primary bg-gradient border-0 form-control">
+                            <a asp-controller="Home" 
+                            asp-action="Details" 
+                            asp-route-id="@product.Id" 
+                            class="btn btn-primary bg-gradient border-0 form-control">
                                 Details
                             </a>
                         </div>
