--- a/BulkyWeb/Areas/Identity/Pages/Account/Manage/_ViewImports.cshtml
+++ b/BulkyWeb/Areas/Identity/Pages/Account/Manage/_ViewImports.cshtml
@@ -1,1 +1,9 @@
 ﻿@using BulkyWeb.Areas.Identity.Pages.Account.Manage
+@using Microsoft.AspNetCore.Identity
+@using BulkyWeb.Areas.Identity
+@using BulkyWeb.Areas.Identity.Pages
+@using BulkyWeb
+@using Bulky.Models
+@using Bulky.Utility;
+@using Bulky.Models.ViewModels
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
