--- a/BulkyWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/BulkyWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                         <div>
                             <a asp-controller="Home" 
                             asp-action="Details" 
-                            asp-route-id="@product.Id" 
+                            asp-route-productId="@product.Id" 
                             class="btn btn-primary bg-gradient border-0 form-control">
                                 Details
                             </a>
